Fix sidebar spacing

--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -33,9 +33,13 @@
 
 .logo--sidebar {
   display: block;
-  width: 80px;
   margin-bottom: $sp-md;
-  flex: 0 auto;
+  width: 64px;
+  flex: 1 0 auto;
+
+  @media #{$brkpt-md} {
+    width: 80px;
+  }
 
   @media #{$brkpt-md-only} {
     margin-bottom: 0;
